<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.LogIn">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"

    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="100dp"
        android:layout_height="111dp"
        app:srcCompat="@mipmap/ic_launcher_foreground" />


    <TextView
        android:id="@+id/busstext"
        android:layout_width="251dp"
        android:layout_height="45dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
       />

    <TextView
        android:id="@+id/inttext"
        android:layout_width="373dp"
        android:layout_height="89dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textointroductorio"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
   />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical">
    <ImageView
        android:id="@+id/personicon"
        android:layout_width="44dp"
        android:layout_height="44dp"

        android:contentDescription="@string/personicondescription"
        android:src="@drawable/personicon"
        />

        <EditText
            android:id="@+id/Email"
            android:layout_width="268dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_google_button"
            android:hint="@string/emailexample"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:autofillHints=""
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical">
    <ImageView
        android:id="@+id/keyicon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"

        android:contentDescription="@string/keyicondescription"
        android:src="@drawable/keyicon" />

    <EditText
        android:id="@+id/Passowrd"
        android:layout_width="268dp"
        android:layout_height="41dp"

        android:autofillHints=""
        android:background="@drawable/bg_google_button"
        android:hint="@string/passwordhit"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
         />
    </LinearLayout>
    <Button
        android:id="@+id/ingresarbtn"
        android:layout_width="314dp"
        android:layout_height="51dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/loginbuttontext"
        android:textColor="#000000"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/recconttext"
        android:layout_width="319dp"
        android:layout_height="33dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/recuperacontrasena"
        android:textColor="@color/orange"
        android:textSize="25sp"
         />

    <LinearLayout

        android:id="@+id/btnGoogle"
        android:layout_width="362dp"
        android:layout_height="58dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_google_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
       >

        <ImageView
            android:id="@+id/imagenlogogoogle"
            android:layout_width="55dp"
            android:layout_height="42dp"
            android:src="@drawable/googlelogo"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="524dp" />

        <TextView
            android:id="@+id/textoIngresargoogle"
            android:layout_width="275dp"
            android:layout_height="42dp"
            android:text="@string/ingoogle"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sincuenta"
        android:textColor="@color/white"
        android:textSize="20sp"
     />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
