<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.LogIn">

    <TextView
        android:id="@+id/regtext"
        android:layout_width="251dp"
        android:layout_height="45dp"
        android:text="@string/registro"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="368dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_google_button"
                android:layout_margin="20dp"
                android:hint="@string/namehint"
                android:inputType="textEmailAddress"
                android:padding="12dp"

                />
            <EditText
                android:id="@+id/Apellido"
                android:layout_width="368dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_google_button"
                android:hint="@string/lastnamehint"
                android:layout_margin="20dp"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                />
            <EditText
                android:id="@+id/Email"
                android:layout_width="368dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_google_button"
                android:hint="@string/emailexample"
                android:layout_margin="20dp"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                />
            <EditText
                android:id="@+id/Passowrd"
                android:layout_width="368dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_google_button"
                android:hint="@string/passwordhit"
                android:layout_margin="20dp"
                android:inputType="textPassword"
                android:padding="12dp"
                />
            <EditText
                android:id="@+id/Password2"
                android:layout_width="368dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_google_button"
                android:hint="@string/passwordhit"
                android:layout_margin="20dp"
                android:inputType="textPassword"
                android:padding="12dp"
                />
            <Button
                android:id="@+id/regbutton"
                android:layout_width="314dp"
                android:layout_height="51dp"
                android:layout_marginBottom="30dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/registrarse"
                android:textColor="#000000"
                android:textSize="25dp"
                />


            <TextView
                android:id="@+id/IniciarSesion"
                android:layout_width="373dp"
                android:layout_height="59dp"
                android:layout_marginBottom="30dp"
                android:text="@string/yatienescuenta"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="20sp"
                />
        </LinearLayout>


    </ScrollView>
</LinearLayout>