<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".ui.inicio.home">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="184dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ExtraText" />

    <TextView
        android:id="@+id/bussname"
        android:layout_width="308dp"
        android:layout_height="37dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inttext"
        android:layout_width="414dp"
        android:layout_height="119dp"
        android:fontFamily="serif"
        android:layout_marginBottom="30dp"
        android:text="@string/textointroductorio"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/ComienzaBtn"
        android:layout_width="266dp"
        android:layout_height="49dp"
        android:backgroundTint="#FFFFFF"
        android:layout_marginBottom="30dp"
        android:text="@string/comienza"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/regtext"
        android:layout_width="122dp"
        android:layout_height="19dp"
        android:layout_marginBottom="128dp"
        android:fontFamily="serif"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="#F15429"
        android:textSize="20sp"
         />

</LinearLayout>